# UA

./: .env.example  .gitattributes  .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py  runtime.py
backend/app/actions/: __init__.py  base.py  examples.py  registry.py
backend/app/adapters/: __init__.py  base.py  sims.py
backend/app/agent/: __init__.py  assembly.py  decisioning.py  graph.py  runner.py
backend/app/agents/: __init__.py  default_agent.py  demo_agent.py  underwriter_skeleton.py
backend/app/api/: __init__.py  loans.py
backend/app/audit/: __init__.py  canonical.py  ledger.py  snapshot.py  verify.py
backend/app/aus/: __init__.py  du_simulator.py
backend/app/domain/: __init__.py  atr.py  lineage.py  numeric.py
backend/app/hmda/: __init__.py  demographics.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py  ua_anthropic.py  ua_base.py  ua_mock.py
backend/app/policy_engine/: __init__.py  ast.py  engine.py  loader.py  result.py
backend/evals/: __init__.py  framework.py  runner.py  test_scenarios.py
backend/evals/scenarios/: 01_greeting.yaml  02_tool_call.yaml
backend/synthetic/: __init__.py  archetypes.py  generate.py  renderers.py
backend/tests/: conftest.py  test_actions.py  test_assembly.py  test_audit_chain.py  test_calculations.py  test_decision_history.py  test_governance.py  test_health.py  test_llm_providers.py  test_pipeline.py  test_policy_engine.py  test_replay.py  test_synthetic_llm.py
(+109 files in other folders)
